Add player table

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,5 +10,6 @@
 @import "sass/components/hero-banner";
 
 /** Pages **/
+@import "sass/pages/catalogo";
 @import "sass/pages/evento";
 @import "sass/pages/paradeportista";
