Pagination and header design for paradeportistas pages

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,7 +7,9 @@
 /** Components **/
 @import "sass/components/buttons";
 @import "sass/components/cards";
+@import "sass/components/gradient-line";
 @import "sass/components/hero-banner";
+@import "sass/components/pagination";
 
 /** Pages **/
 @import "sass/pages/catalogo";
