--- a/src/sass/pages/_catalogo.scss
+++ b/src/sass/pages/_catalogo.scss
@@ -1,4 +1,9 @@
 .catalogo{
+	&__th{
+		padding-top: 1rem !important;
+		padding-bottom: 1rem !important;
+	}
+
 	&__form{
 		gap: 1.5rem;
 		flex-wrap: wrap;
@@ -7,7 +12,7 @@
 
 	&__bandera{
 		clip-path: circle();
-		width: 60px;
+		width: 70px;
 		height: auto;
 		margin-left: -12px;
 		@include media-breakpoint-up(lg){
@@ -19,9 +24,10 @@
 		width: 100%;
 		height: auto;
 		border-radius: .5rem  .5rem 0 0;
+		margin: auto;
 		@include media-breakpoint-up(lg){
-			border-radius: .5rem;
-			width: 60px;
+			clip-path: circle();
+			width: 70px;
 			height: auto;
 		}
 	}
