--- a/src/sass/pages/_catalogo.scss
+++ b/src/sass/pages/_catalogo.scss
@@ -1,4 +1,37 @@
 .catalogo{
+	&__filtros{
+		@include media-breakpoint-down(lg){
+			border-radius: .375rem;
+		}
+	}
+
+	&__wrapper{
+		@include media-breakpoint-up(lg){
+			border-radius: .375rem;
+			overflow: hidden;
+			box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+		}
+	}
+
+	&__select{
+		border: 0 !important;
+		border-radius: 16px !important;
+		padding-left: 1.2rem;
+		background-color: #363d43;
+		color: #dad1d1;
+		@include media-breakpoint-down(lg){
+			padding-top: 15px;
+			padding-bottom: 15px;
+			border-radius: 28px !important;
+		}
+	}
+
+	&__select-container{
+		@include media-breakpoint-down(lg){
+			width: 100%;
+		}
+	}
+
 	&__th{
 		padding-top: 1rem !important;
 		padding-bottom: 1rem !important;
@@ -7,7 +40,9 @@
 	&__form{
 		gap: 1.5rem;
 		flex-wrap: wrap;
-		justify-content: space-between;
+		@include media-breakpoint-up(lg){
+			justify-content: space-between;
+		}
 	}
 
 	&__bandera{
