--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -1,10 +1,11 @@
 .pd-card{
-    &__xwrapper{
+    &__wrapper{
+		background-color: #fff;
+		box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+		border-radius: 1rem;
+		height: 100%;
         display: flex;
         flex-direction: column;
-        @include media-breakpoint-up(lg){
-            justify-content: space-between;
-        }
     }
 
     &__col{
@@ -26,12 +27,16 @@
         object-fit: cover;
         width: 100%;
         aspect-ratio: 5/3;
+		transition: filter 100ms ease-in;
+    }
+
+    &__image:hover{
+		filter: brightness(.8);
     }
 
     &__body{
         padding: 1.5rem 1rem;
         border-radius: 0 0 1rem 1rem;
-        background-color: rgb(241, 240, 240);
         @include media-breakpoint-up(lg) {
         }
     }
