Paradeportes page functionality

--- a/src/app.scss
+++ b/src/app.scss
@@ -15,4 +15,5 @@
 /** Pages **/
 @import "sass/pages/catalogo";
 @import "sass/pages/evento";
+@import "sass/pages/paradeporte";
 @import "sass/pages/paradeportista";
