--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -34,6 +34,18 @@
 		filter: brightness(.8);
     }
 
+    &__image-paradeportista{
+        border-radius: 1rem 1rem 0 0;
+        object-fit: cover;
+        width: 100%;
+        aspect-ratio: 1/1;
+		transition: filter 100ms ease-in;
+    }
+
+    &__image-paradeportista:hover{
+		filter: brightness(.8);
+    }
+
     &__body{
         padding: 1.5rem 1rem;
         border-radius: 0 0 1rem 1rem;
