Fix template paths logic

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,7 @@
 @import "sass/components/cards";
 @import "sass/components/gradient-line";
 @import "sass/components/hero-banner";
+@import "sass/components/lista-paradeportes-block";
 @import "sass/components/pagination";
 
 /** Pages **/
