Login page functionality and custom pages

--- a/src/sass/components/_lista-paradeportes-block.scss
+++ b/src/sass/components/_lista-paradeportes-block.scss
@@ -18,7 +18,9 @@
 	&__wrapper-a{
 		text-decoration: none;
 		color: #fff !important;
-		font-size: 1.4rem;
+		@include media-breakpoint-up(lg){
+			font-size: 1.4rem;
+		}
 	}
 
 	&__logo{
